[package]
name = "voker-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
voker-cfg = { path = "../voker-cfg" }

# -------------------- External  --------------------

serde_core = { version = "1", default-features = false, features = ["alloc"] }

indexmap = { version = "2.13", default-features = false, features = ["serde"] }

fastvec = { version = "2.0", default-features = false, features = ["arrayvec", "fastvec", "smallvec"] }

foldhash = { version = "0.2.0", default-features = false }
hashbrown = { version = "0.16.1", default-features = false, features = ["equivalent", "raw-entry", "serde"] }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition", "--generate-macro-expansion"]
all-features = true
