[package]
name = "voker-asset-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
voker-macro-utils = { path = "../../voker-macro-utils" }

syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
